--- a/hakkımda.html
+++ b/hakkımda.html
@@ -299,7 +299,7 @@
                     <div class="menu">
                         <div class="HeaderMenuAlani">
                             <ul>
-                                <li><a href="anasayfa.html">Ana Sayfa</a></li>
+                                <li><a href="index.html">Ana Sayfa</a></li>
                                 <li><a href="hakkımda.html">Hakkımda</a>
                                 </li>
                                 <li><a href="çalışmalarım.html">Çalışmalarım</a>
@@ -335,7 +335,7 @@
                 <div id="Footer">
                     <div id="FooterUstDiv">
                         <ul id="FooterMenuAlani">
-                            <a class="footerlink" href="anasayfa.html" target="_blank">
+                            <a class="footerlink" href="index.html" target="_blank">
                                 <li class="FooterMenuSecenekleri Kaydirma">Anasayfa<span> |</span></li>
                             </a>
                             <a class="footerlink" href="hakkımda.html" target="_blank">
